fix scrollbar colors

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@
 }
  
 ::-webkit-scrollbar-thumb {
-  background: #717171; 
+  background: #6d6d6d; 
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #c1c1c1c1; 
 }
 
 /* common */
